<?xml version="1.0"?>
<package format="2">
    <name>pool_allocator_demo</name>
    <version>0.0.1</version>
    <description>Demo of the performance of pool allocator.</description>

    <maintainer email="tyler@picknik.ai">Tyler Weaver</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>roscpp</depend>

</package>
